# folio

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  MIGRATION_LOG.md  README.md  TODO.md  WORKLOG_MONACO.md  tasks.json
.github/: FUNDING.yml
docs/: MONACO_MERGE_PLAN.md  RELEASES.md  automation-contract.md  e2e-headless-caveats.md  e2e-testing.md  frontend-globals.md  headless-monaco-screenshots.md  headless-monaco-test-results.md  linux-md-icon.md  next-session-prompt.md  refactoring-plan.md  testreport-2026-05-22.md
goldfiles/expected/: frontmatter-example.html  index.html  large-document.html
scripts/: bake_avatar_vignette.py  install-folio-icons.sh  run-e2e.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: automation.rs  document_service.rs  document_store.rs  editor_commands.rs  export.rs  file_icon.rs  file_kind.rs  file_resolver.rs  frontmatter.rs  heading_anchor.rs  lib.rs  link_interceptor.rs  logging.rs  main.rs  navigation.rs  panel_state.rs  pdf_export.rs  persist.rs  renderer.rs  settings.rs  state.rs  text_statistics.rs  theme.rs  toc.rs  vault.rs  vault_watcher.rs  workspace.rs
src-tauri/src/automation/: ack.rs  context.rs  dom.rs  error.rs  eval.rs  helpers.rs  middleware.rs  mock.rs  mod.rs  router.rs  types.rs  wait.rs
src-tauri/src/automation/handlers/: console.rs  document.rs  dom.rs  eval.rs  mod.rs  screenshot.rs  state.rs  ui.rs  wait.rs
src-tauri/src/commands/: app.rs  automation.rs  editor.rs  export.rs  file.rs  icon.rs  mod.rs  nav.rs  shell.rs  vault_cmd.rs  workspace_cmd.rs
src-tauri/src/commands/app/: dialog.rs  log_bridge.rs  mod.rs  settings.rs  shell_opener.rs
src-tauri/src/commands/events/: mod.rs  navigation.rs  payload.rs  router.rs  vault.rs
src-tauri/src/commands/file/: close.rs  image.rs  list.rs  mod.rs  read.rs  rename.rs  save_as.rs  types.rs  util.rs
src-tauri/src/editor_commands/: blocks.rs  inline.rs  lines.rs  mod.rs  util.rs
src-tauri/src/file_icon/: fallback.rs  linux.rs  mac.rs  mod.rs  windows.rs
src-tauri/src/layouts/: base.css  classic.css  clean.css  github.css
src-tauri/src/menu/: build.rs  events.rs  ids.rs  lookup.rs  mod.rs  recent.rs  strings.rs
src-tauri/tests/: goldfile_diff.rs  integration_editor.rs  integration_file.rs  integration_nav.rs  integration_pipeline.rs  smoke_automation.rs  smoke_frontend_assets.rs  smoke_pdf_export.rs
src-tauri/web/: copy-monaco.js  editor.ts  globals.d.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
src-tauri/web/app/: main.ts
src-tauri/web/app/automation/: events.ts
src-tauri/web/app/editor/: shell.ts
src-tauri/web/app/state/: document.ts
src-tauri/web/app/ui/: about-dialog.ts  cheatsheet.ts  dialogs.ts  drag-drop.ts  export-dialog.ts  find-bar.ts  image-dialog.ts  language-picker.ts  menu-router.ts  paste-handler.ts  rails.ts  settings-dialog.ts  toolbar-actions.ts  zoom.ts
src-tauri/web/app/util/: log.ts
src-tauri/web/app/vault/: context-menu.ts  tree.ts
src-tauri/web/app/view/: code-highlight.ts  html-scroll-sync.ts  html.ts  image.ts  markdown.ts  preview.ts  scroll-sync.ts
src-tauri/web/editor/: bridge.ts  events.ts  find.ts  index.ts  mount.ts  state.ts  text.ts  view-code.ts
src-tauri/web/styles/: base.css  content.css  dialogs.css  find-bar.css  index.css  overlays.css  scrollbar.css  statusbar.css  toc.css  toolbar.css  vault.css
src-tauri/web/tests/: helpers.ts  setup.ts  smoke.test.ts
src-tauri/web/tests/automation/: events.test.ts
src-tauri/web/tests/state/: document.test.ts
src-tauri/web/tests/ui/: find-bar.test.ts
src-tauri/web/tests/util/: log.test.ts
src-tauri/web/tests/vault/: tree.test.ts
src-tauri/web/tests/view/: html.test.ts  image.test.ts  scroll-sync.test.ts
test-docs/: frontmatter-example.md  index.md  large-document.md
test-docs/syntax/: sample.html  sample.json  sample.sql  sample.txt  sample.xml  sample.yaml
tests/e2e/: README.md  run.py
tests/e2e/artifacts/20260518-113727/: errors.md  report.md
tests/e2e/artifacts/20260518-113816/: errors.md  report.md
tests/e2e/artifacts/20260518-123705/: errors.md  report.md
tests/e2e/artifacts/20260518-123827/: report.md
tests/e2e/fixtures/: html-view.css  html-view.html  sample.md
tests/e2e/fixtures/notes/: deep.md
tests/e2e/lib/: api.py  app.py  report.py  todo.py  visual.py
tests/e2e/scenarios/: 01_boot.py  02_view_mode.py  03_edit_mode.py  04_theme.py  05_vault.py  06_find.py  07_workspace.py  08_save_roundtrip.py  09_undo_redo.py  10_editor_commands.py  11_menu_file.py  12_menu_edit.py  13_menu_view.py  14_menu_help.py  15_keybindings.py  16_vault_tree.py  17_workspace_pin.py  18_history.py  19_context_menus.py  20_toc_click.py  21_split_mode.py  22_html_view.py
tools/goldfile-gen/GoldfileGen/: GoldfileGen.csproj  Program.cs
tools/goldfile-gen/GoldfileGen/Resources/: editor.bundle.js  shell-template.html
tools/goldfile-gen/GoldfileGen/Services/: FrontmatterExtractor.cs  HeadingAnchorPreprocessor.cs  MarkdownPipelineFactory.cs  MarkdownRenderer.cs  TocExtractor.cs
